# GithubBot

./: .env.example  .env.local  .gitignore  Dockerfile  Dockerfile.new  LICENSE  QUICKSTART.md  README.md  README_ZH.md  STARTUP_GUIDE.md  architecture.md  debug_chromadb_8000.py  debug_file_parser.py  debug_scan_repository.py  debug_vector_db.py  debug_vector_store.py  docker-compose.yml  pyproject.toml  requirements.txt  start.bat  start.ps1  start.sh  switch_env.py  test_config_parsing.py  test_file_processing.py  test_qwen_api.py
scripts/: add_repository_identifier_column.py
src/: main.py
src/api/v1/: api.py
src/api/v1/endpoints/: repositories.py  settings.py
src/core/: config.py
src/db/: models.py  session.py
src/schemas/: repository.py
src/services/: embedding_manager.py  ingestion_service.py  llm_manager.py  query_service.py  task_queue.py  vector_store.py
src/utils/: ast_parser.py  file_parser.py  git_helper.py
src/worker/: celery_app.py  tasks.py
tests/test_utils/: test_ast_parser.py  test_real_class_chunking.py
